<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
	<!-- 欢迎登陆 -->
    <TextView
        android:id="@+id/welocome_login"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="@drawable/title_bar_bg"
        android:textSize="18sp"
        android:gravity="center"
        android:text="@string/txt_welcome_login" />
    
	<!-- 用户名layout -->
    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
    	android:layout_marginRight="10dp"
        android:layout_below="@+id/welocome_login"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/txt_login"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_login"
            android:layout_width="0dp"
            android:background="@drawable/edit_text_selector"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:hint="@string/edt_login_hint"
            android:singleLine="true" />
    </LinearLayout>
    
    <!-- 密码layout -->
    <LinearLayout
        android:id="@+id/password_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
    	android:layout_marginRight="10dp"
        android:layout_below="@+id/login_layout"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/txt_password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:background="@drawable/edit_text_selector"
            android:hint="@string/edt_login_hint"
            android:password="true"
            android:singleLine="true" />
    </LinearLayout>
    
	<!-- 登陆和返回按钮 -->
    <RelativeLayout
        android:id="@+id/button_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
   		android:layout_marginRight="10dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/password_layout"
        android:layout_marginTop="30dp" >

        <Button
            android:id="@+id/btn_login"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/btn_selected"
            android:text="@string/btn_login" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_selected"
            android:text="@string/btn_register" />
    </RelativeLayout>

    
  	<Button
            android:id="@+id/btn_return"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_layout"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
   			android:layout_marginRight="10dp"
            android:background="@drawable/btn_selected"
            android:text="@string/btn_return"  />

</RelativeLayout>