<?xml version="1.0" encoding="utf-8"?>  
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" >
	
    <RelativeLayout 
        android:id="@+id/order_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >
        
        <ImageView
            android:id="@+id/order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/order" />
        <TextView 
            android:layout_below="@+id/order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/txt_order"
             />
    </RelativeLayout>
    
   <RelativeLayout 
       android:id="@+id/check_order_layout"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >
        
        <ImageView
            android:id="@+id/check_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/check_order" />
        <TextView 
            android:layout_below="@+id/check_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/txt_check_order" />
    </RelativeLayout>
    
    <RelativeLayout 
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >
        
        <ImageView
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_register" />
        <TextView 
            android:layout_below="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/txt_login_register" />
    </RelativeLayout>
    
    <RelativeLayout 
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >
        
        <ImageView
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/help" />
        <TextView 
            android:layout_below="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/txt_help" />
    </RelativeLayout>
</LinearLayout>
